--- a/styles.css
+++ b/styles.css
@@ -6,64 +6,105 @@ body{
     background-color: #ffd372;
     font-family: poppins, sans-serif;
     margin: 0;
+    padding: 0;
 }
 
 /**************************** NAV BAR ******************************/
 
-nav{
-    background-color: #D58BDD;
-    color: #905e96;
+.navbar{
+    background-color: #905e96;
+    color: #fff;
     font-style: bolder;
-    border-bottom: 3px solid #c0c0c0;
-}
-
-nav ul{
-    list-style: none;
     display: flex;
-    font-weight: bold;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    max-width: 100%;
-    margin: 0;
-    padding: 15px 50px 0;
+    justify-content: space-between;
+    position: relative;
 }
 
-.center-nav-links{
-    display: flex;
-    text-align: center; 
-}
-
-.center-link{
-    padding: 0 25px;
-}
-
-.logo{
-    font-size: 2rem;
+.brand-name{
+    font-size: 1.5rem;
     font-weight: bold;
+    margin: 1rem;
 }
 
-.mail-icon{
-    max-width: 100%;
-    font-size: 3.5rem;
+.navbar-links{
+    height: 100%;
+}
+
+.navbar-links ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-links li {
+    list-style: none;
+}
+
+.navbar-links li a {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    padding: 1rem;
+}
+
+.navbar-links li:hover {
+    background-color: #D58BDD;
+}
+
+.hamburger-btn{
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.hamburger-btn .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+@media (max-width: 950px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .hamburger-btn {
+        display: flex;
+    }
+
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links ul li {
+        text-align: center;
+    }
+
+    .navbar-links ul li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
 }
 
 /**************************** Anchor Tags *****************************/
-
-a{
-    text-decoration: none;
-}
- a:link{
-    color: #905e96;
- }
-
- a:visited{
-    color: #905e96;
- }
-
- a:hover{
-    color: #4d3050;
- }
 
  .project-link:hover{
     color: #905e96;
@@ -83,10 +124,11 @@ a{
 h1{
     font-size: 5em;
     max-width: 40%;
-    display: inline-block;
     letter-spacing: 10%;
     line-height: 137px;
     margin: 100px 184px 0;
+    white-space: nowrap;
+    width: 0;
 }
 
 h2{
@@ -119,20 +161,23 @@ h4{
     margin: auto;
 }
 
-.title-pic{
-    display: flex;
-    justify-content: space-between;
-}
-
 /**************************** IMAGES ******************************/
 
 #profile-pic{
-    margin: 100px 184px 100px 0;
+    border: 2px solid #905e96 ;
+    border-radius: 50%;
+    margin: 150px 184px 100px 0;
     width: 380px;
+    animation: bounce 1s infinite alternate;
 }
-  
+
+@keyframes bounce {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-30px); }
+}
+
 .project-img{
-    border-radius: 15px;
+    border-radius: 20px;
     white-space: nowrap; 
     position: absolute;
     overflow: hidden;
@@ -210,13 +255,15 @@ button{
     display: flex;
     flex-direction: column;
     justify-content: end;
+    flex-wrap: wrap;
+    flex: 1 1 30%;
     max-width: 30%;
     height: auto;
     text-align: center;
     padding: 20px;
     margin: 10px;
     position: relative;
-    width: 50%;
+    
 }
 
 .project-text{
@@ -251,6 +298,13 @@ button{
 
 /****************************** SECTIONS *****************************/
 
+.title-pic{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+}
+
 .bio-section{
     background-color: #FFD372;
     margin: 0 184px;
@@ -279,6 +333,8 @@ button{
     justify-content: center;
 }
 
+
+/* *********************************** FOOTER **************************************** */
 footer{
     background-color: #D58BDD;
     color: #905e96;
@@ -329,168 +385,9 @@ footer{
     padding: 0 0 10px 50px; 
 }
 
-/*************************** MEDIA QUERIES ****************************/
 
+/************************************* MEDIA QUERIES ********************************/
 
-
-
-/***************** iPad/Smaller Screen dimensions *********************/
-
-@media (min-width: 768px) and (max-width: 1330px) {
-
-/******************************** NAV BAR *****************************/
-    .center-link{
-        padding: 0 12px;
-    }
-
- /**************************** HEADINGS ******************************/
-
-h1{
-    font-size: 3.5em;
-    max-width: 55%;
-    display: inline-block;
-    letter-spacing: 5%;
-    line-height: 85px;
-    margin: 75px;
-}
-
-h2{
-    font-size: 2rem;
-    max-width: 35%;
-    margin: 0 75px;
-}
-
-h3{
-    font-size: 2rem;
-    max-width: 30%;
-}
-
-h4{
-    font-size: 1.2rem;
-}
-
-.contact-me-heading{
-    font-size: 60px;
-}
-
-/**************************** IMAGES ******************************/
-
-#profile-pic{
-    margin: 100px;
-    width: 340px;
-    height: 340px;
-}
-
-/****************************** PAGE ELEMENTS *************************/
-
-button{
-    background-color: #fff;
-    border: 5px solid #c0c0c0;
-    border-radius: 50px;
-    box-shadow: 0px 9px 12px #905e96;
-    color: #905e96;
-    display: inline-block;
-    font-size: 45px;
-    padding: 16px 48px;
-    margin-right: 50px;
-}
-
-.bio-btn{
-    display: flex;
-    margin: 0 75px;
-}
-
-.bio-info{
-    background-color: #fbfacd;
-    color: #905e96;
-    margin: 40px 75px;
-    padding: 40px;
-}
-
-.des-cards, .dev-cards{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 75px;
-}
-
-.card{
-    height: auto;
-}
-
-.gmail-circle{
-    background-color: #FBFACD;
-    border-radius: 50%;
-    max-width: 300px;
-    max-height: auto;
-    margin-bottom: 20px;
-}
-
-
-/****************************** SECTIONS *****************************/
-
-#designer-section{
-    margin-bottom: 50px;
-}
-
-footer{
-    font-weight: 500;
-    padding: 50px;
-}
-
-.footer-icons{
-    font-size: 1.2rem;
-}
-
-.footer-text-right{
-    padding-right: 8px;
-}
-
-.contact-form{
-    padding: 10px 75px;
-}
-
-.email-form, .subject-form{
-    font-size: 22px;
-    padding: 10px 0 10px 30px;
-}
-
-.message-form{
-    font-size: 22px;
-    padding: 0 0 10px 30px; 
-}
-}
-
-/******************* MORE PROJECTS BTN MEDIA QUERY *******************/
-
-@media (min-width: 1220px) and (max-width: 1600px) {
+@media screen { max-width: ;
     
-    .more-projects-btn{
-        left: 60%;
-    }
-
-}
-
-@media (min-width: 1060px) and (max-width: 1219px) {
-    
-    .more-projects-btn{
-        left: 55%;
-    }
-
-}
-
-@media (min-width: 850px) and (max-width: 1059px) {
-    
-    .more-projects-btn{
-        left: 45%;
-    }
-
-}
-
-@media (min-width: px) and (max-width: 849px) {
-    
-    .more-projects-btn{
-        left: 40%;
-    }
 }
